# meta_transcriptomics_pipeline_sample

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: kronaOut.html  tableSummary.html
meta-transcriptomics_pipeline/: __main__.py  helpers.py  join_taxid_contigs.py  main_pipeline  main_pipeline.py  map_reads_to_contigs.py  merge_contigs.py  merge_sams.py  rhymes.py
meta_transcriptomics_pipeline/: __main__.py  adjust_tpms.py  blast_sr.py  count_num_lines.pyx  diamond.py  filter_files.py  filter_results.py  finalisation.py  generate_full_read_contig_info.py  generate_pipeline_summary.py  generate_table_output.py  getScientificNames.py  get_abundance.py  get_best_blast_hits.py  get_best_sam_hits.py  get_lineage_info.py  get_taxonomic_mappings.sh  helpers.py  join_seq_to_taxid.py  join_taxid_contigs.py  main_pipeline.py  map_reads_to_contigs.py  match_scores.py  match_taxid_contig.py  merge_blast_outputs.py  merge_contigs.py  merge_sams.py  minimap2_contigs.py  minimap2_reads.py  obtain_relevant_taxids.c  obtain_relevant_taxids.pyx  paf2blast6.py  practice.py  preprocessing.py  reads_contig_mapping.sh  remove_contaminants_control.py  samp1.txt  samp2.txt  samp3.txt  samp4.txt  (+3 more)
tests/: test_count_bases.py  test_count_num_lines.py  test_count_reads_mapped_to_contigs.py  test_get_best_blast_hits.py  test_get_best_sam_hits.py  test_get_scientific_names.py  test_join.py  test_join_python.py  test_merge_blast_outputs.py  test_merge_contigs.py  test_readcounts.py  test_separate_reads_by_size.py
tests/sample/: nucl.sam  nucl_out.sam  prot.sam  prot_out.sam
(+34 files in other folders)
