[build-system]
requires = ["setuptools", "wheel", "numpy>=1.19.0", "Cython>=0.29.21"]
build-backend = "setuptools.build_meta"

[project]
name = "meta_transcriptomics_pipeline"
authors = [
    {name = "Yasir Kusay", email = "yasir.kusay@student.unsw.edu.au"},
]
readme = "README.md"
classifiers = [ "License :: OSI Approved :: MIT License",]
requires-python = ">=3.8"
dependencies = [
    "biopython>=1.78",
    "psutil>=5.8.0",
    "pysam>=0.16.0.1",
    "networkx>=2.4",
    "scipy==1.7.0",
    "marisa-trie==0.7.7",
    "pandas==1.3.3",
    "numpy==1.21.2",
    "pyfaidx==0.6.2",
    "distributed==2021.11.1",
    "dask==2021.11.1",
    "hypothesis==6.29.0"
]
dynamic = ['version', 'description']
